# Mathilda

./: Dockerfile  bot.py  build.sh  corrections.db  learnings.db  mathilda.db  mathquest.db  pyproject.toml  replit.nix  requirements.txt
