[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.5.2",
    "flask>=3.1.0",
    "ollama>=0.4.7",
    "openai>=1.69.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.3",
    "speechrecognition>=3.14.2",
    "vosk>=0.3.45",
]
